# music

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  TODO.md  clippy.toml  llvm-cov.toml  nextest.toml  rustfmt.toml  todo.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/music-api/: Cargo.toml
api/music-api/src/: lib.rs
api/music-api/src/models/: mod.rs  plan.rs
cli/music-cli/: Cargo.toml
cli/music-cli/src/: args.rs  main.rs  planner_util.rs  report.rs  style.rs  templates.rs
cli/music-cli/tests/: plan_command.rs  templates_command.rs
cli/music-cli/tests/fixtures/: simple_template.json5
core/music-theory/: Cargo.toml
core/music-theory/src/: chord.rs  function.rs  interval.rs  key.rs  lib.rs  pitch.rs  scale.rs
core/music-time/: Cargo.toml
core/music-time/benches/: timegrid_alignment.rs
core/music-time/src/: beat.rs  lib.rs  meter.rs  tempo.rs  timegrid.rs  timespan.rs
core/music-time/tests/: tempo.rs  timegrid.rs  timespan.rs
core/music-time/tests/tempo/: property_test.rs
core/music-time/tests/timegrid/: property_test.rs
core/music-time/tests/timespan/: property_test.rs
crates/music-analysis/: Cargo.toml
crates/music-analysis/src/: estimate.rs  lib.rs  ngram.rs  profile.rs
crates/music-cli/: Cargo.toml  README.md  build.rs
crates/music-cli/crates/music-cli/schemas/: schema_feature_active.txt
crates/music-cli/schemas/: README.md
crates/music-cli/src/: cli.rs  format.rs  main.rs  responses.rs  theory.rs
crates/music-cli/src/handlers/: analyze.rs  convert.rs  estimate.rs  explain.rs  explain_diff.rs  export_schemas.rs  extrapolate.rs  generate.rs  inspect.rs  interpolate.rs  list.rs  map.rs  mod.rs  placeholder.rs  profile.rs  render.rs  resolve.rs  score.rs  search.rs  suggest.rs  validate.rs
crates/music-cli/src/reports/: analysis.rs  chord.rs  conversion.rs  diff.rs  estimate.rs  extrapolation.rs  generation.rs  interpolation.rs  mod.rs  pitch.rs  profile.rs  reharmonization.rs  render.rs  resolution.rs  scale.rs  scoring.rs  search.rs  validation.rs
crates/music-cli/src/reports/scale/: explanation.rs  mapping.rs  mod.rs  modes.rs  search.rs  systems.rs
crates/music-cli/tests/: analyze_golden.rs  estimate_tests.rs  explain_diff_golden.rs  extrapolate_tests.rs  interpolate_golden.rs  map_golden.rs  map_tests.rs  profile_tests.rs  resolve_tests.rs  schema_export_tests.rs  score_golden.rs  search_golden.rs
crates/music-cli/tests/fixtures/: simple_alt.mid
crates/music-core/: Cargo.toml
crates/music-core/benches/: pitch_bench.rs
crates/music-core/src/: interval.rs  lib.rs  pitch.rs  prelude.rs  registry.rs  system.rs
crates/music-core/src/chord/: diatonic.rs  errors.rs  implementation.rs  inversion.rs  mod.rs  parsing.rs  pattern.rs  quality.rs
crates/music-core/src/interval/: errors.rs  implementation.rs  mod.rs
crates/music-core/src/pitch/: abstract.rs  errors.rs  label.rs  mod.rs
crates/music-core/src/pitch/implementation/: core.rs  intervals.rs  labels.rs  mod.rs  resolution.rs  state.rs
crates/music-core/src/registry/: errors.rs  mod.rs  tuning.rs
crates/music-core/src/scale/: catalog.rs  errors.rs  implementation.rs  iterators.rs  mod.rs  pattern.rs
crates/music-core/src/systems/: cents_scale.rs  just_intonation.rs  mod.rs  twelve_tet.rs  twenty_four_tet.rs
crates/music-core/tests/: chord_quality_tests.rs  interval_basic.rs  interval_tests.rs  mod.rs  pitch_tests.rs  registry_tests.rs  system_tests.rs
crates/music-core/tests/pitch/: abstract_tests.rs  errors_tests.rs  implementation_tests.rs  label_tests.rs  mod.rs  serialization_tests.rs  support.rs
crates/music-core/tests/scale/: construction_tests.rs  interval_tests.rs  iterator_tests.rs  mod.rs  modal_tests.rs  support.rs
crates/music-core/tests/systems/: cents_scale_tests.rs  just_intonation_tests.rs
crates/music-core/tests/systems_tests/: cents_scale_tests.rs  just_intonation_tests.rs  mod.rs  twelve_tet_tests.rs  twenty_four_tet_tests.rs
crates/music-engine/: Cargo.toml
crates/music-engine/src/: lib.rs
crates/music-ffi/: Cargo.toml
crates/music-playground/: Cargo.toml
crates/music-playground/src/: main.rs
crates/music-signal-core/: Cargo.toml
crates/music-theory/: Cargo.toml
docs/: 01. DISCOVERY_SUMMURY.md  02. SPECIFICATION_AND_DESIGN.md  03. TECHNICAL_IMPLEMENTATION_PLAN.md  CLI.md  HELP.md  coverage.md  perf_planner_baseline.md  perf_spelling_baseline.md  perf_timegrid_baseline.md  performance.md  publishing.md  release_notes.md  stabilization_checklist.md  templates_dsl.md
notation/music-articulation/: Cargo.toml
notation/music-articulation/src/: articulation.rs  dynamics.rs  lib.rs
notation/music-engraving/: Cargo.toml
notation/music-engraving/src/: geometry.rs  glyph.rs  lib.rs
