[workspace]
resolver = "3"
members = [
  "crates/music-core",
  "crates/music-theory",
  "crates/music-signal-core",
  "crates/music-analysis",
  "crates/music-engine",
  "crates/music-cli",
  "crates/music-ffi",
  "crates/music-playground",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
serde = { version = "1.0.228", features = [
  "derive",
  "alloc",
], default-features = false }
serde_json = "1.0.145"
thiserror = "2.0.17"
bitflags = "2.10.0"
smallvec = "1.15.1"
approx = "0.5.1"
plotters = "0.3.7"
rustfft = "6.4.1"
clap = { version = "4.5.52", features = ["derive"] }
anyhow = "1.0.100"
criterion = { version = "0.7.0", features = [
  "html_reports",
], default-features = true }
num-traits = { version = "0.2.19", default-features = false }
