[workspace]
resolver = "3"
members = [
  "core/music-acoustic",
  "core/music-theory",
  "core/music-time",
  "notation/music-articulation",
  "notation/music-engraving",
  "notation/music-notation",
  "score/music-score",
  "api/music-api",
  "cli/music-cli",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
serde = { version = "1.0.228", features = [
  "derive",
  "alloc",
], default-features = false }
serde_json = "1.0.145"
thiserror = "2.0.17"
bitflags = "2.10.0"
smallvec = { version = "1.15.1", features = ["serde"] }
approx = "0.5.1"
plotters = "0.3.7"
rustfft = "6.4.1"
clap = { version = "4.5.52", features = ["derive"] }
anyhow = "1.0.100"
criterion = { version = "0.7.0", features = [
  "html_reports",
], default-features = true }
num-traits = { version = "0.2.19", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
