[package]
name = "music-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors = ["Music Stack"]
description = "API models and helpers for the music workspace"
repository = "https://github.com/lokrain/music"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
