[package]
name = "music-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line utilities for the music workspace."
repository = "https://github.com/lokrain/music"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
music-score = { path = "../../score/music-score" }
music-theory = { path = "../../core/music-theory" }
music-api = { path = "../../api/music-api" }
directories = "5.0.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.13.0"
