[package]
name = "music-theory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Temperament-aware pitch, interval, scale, chord, and key primitives."
repository = "https://github.com/lokrain/music"
keywords = ["music", "theory", "pitch"]
categories = ["multimedia::audio"]

[dependencies]
music-acoustic = { path = "../music-acoustic" }
