[package]
name = "music-time"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rhythm utilities: beats, time spans, meter, tempo, and time grids."
repository = "https://github.com/lokrain/music"
keywords = ["music", "tempo", "rhythm"]
categories = ["multimedia::audio"]

[dependencies]

[dev-dependencies]
proptest = "1.9.0"
criterion = { workspace = true }

[[bench]]
name = "timegrid_alignment"
harness = false
