[package]
name = "music-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
music-analysis = { path = "../music-analysis" }
music-engine = { path = "../music-engine" }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
midly = "0.5.3"
schemars = { version = "0.8", optional = true }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[features]
default = ["serde", "serde_json"]
schema = ["schemars", "serde", "serde_json"]
